# CloudMosa_Hackathon

./: .gitignore  404.html  Caddyfile  README.md  docker-compose.yml  index.html  index.txt
.github/workflows/: deploy.yml
404/: index.html
_next/static/0In2Jb6ZLC5O836-u5mbJ/: _buildManifest.js
_next/static/PqzzVPua_9qCzdV6CkWTI/: _buildManifest.js
_next/static/chunks/: 255-348dd9bc564a2c41.js  46-003cd931f6814dfe.js  589-094abf3dad3007e9.js  880-959987dba2ccc275.js  main-29dec480b2226d1f.js  main-app-ba2d3c2b8a68f32d.js  webpack-17e34253921538ca.js  webpack-43328c67e3813eee.js
_next/static/css/: 0bbf5948666fd54e.css  422f4b3e4e2b4363.css  5f39f98769e89f1b.css  7ad01df0baa0851b.css  bb56db73a07416b1.css
about/: index.html  index.txt
agent/: .gitignore  Dockerfile  agent_graph.mmd  app.py  generate_docs.py  llm.py  models.py  pyproject.toml  requirements.txt  schemas.py  state.py  visualize.py
agent/data/: memory.json  sample_transactions.csv
agent/dev/: generate_docs.py  visualize.py
agent/docs/: agent_design.md  agent_graph.mmd
agent/graph/: agent_graph.py
agent/memory/: memory_store.py
agent/routers/: __init__.py  advice.py  tips.py
agent/tools/: advisor.py  financial_tips.py  memory_tools.py  tx_ingest.py  tx_loader.py
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  finance.py  tips.py  transactions.py  users.py
backend/demo/: generate_transactions.py
currencyConverter/: index.html  index.txt
expenseTracker/: index.html  index.txt
financialAnalysis/: index.html  index.txt
financialTips/: index.html  index.txt
frontend/: .prettierignore  .prettierrc  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/actions/: auth.ts
frontend/app/components/: ClientLayout.tsx  KeyboardHandler.tsx  Keypad.tsx  LogoutConfirmButton.tsx  NavBar.tsx  Navigation.tsx  NavigationContext.tsx  login-form.tsx  routes.ts  signup-form.tsx
frontend/app/currencyConverter/: page.tsx
frontend/app/expenseTracker/: actions.ts  page.tsx  transactions-client.tsx
investmentCalculator/: index.html  index.txt
(+33 files in other folders)
