[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=0.1.0",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "pandas>=2.2",
    "python-dotenv>=1.0",
]
