[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "google-generativeai>=0.8.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=0.1.0",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "pandas>=2.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0",
    "requests>=2.31.0",
    "uvicorn>=0.24.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "pyright>=1.1.405",
]

[tool.flake8]
exclude = [".git", "__pycache__", ".venv"]

[tool.isort]
profile = "black"
