[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8-pyproject>=1.2.3",
    "isort>=6.0.1",
    "pyright>=1.1.405",
]

[tool.flake8]
exclude = [".git", "__pycache__", ".venv"]
